--- a/src/main/resources/templates/patients.html
+++ b/src/main/resources/templates/patients.html
@@ -36,13 +36,13 @@
                         <td th:text="${p.dateNaissance}"></td>
                         <td th:text="${p.malade}"></td>
                         <td th:text="${p.score}"></td>
-                        <td sec:authorize="hasRole('ADMIN')">
+                        <td sec:authorize="hasAuthority('ADMIN')">
                             <a onclick="return confirm('êtes-vous sûr de supprimer ?')" class="btn btn-danger"
-                               th:href="@{delete(id=${p.id}, keyword=${keyword}, page=${currentPage})}">Delete</a>
+                               th:href="@{/admin/delete(id=${p.id}, keyword=${keyword}, page=${currentPage})}">Delete</a>
                         </td>
-                        <td sec:authorize="hasRole('ADMIN')">
+                        <td sec:authorize="hasAuthority('ADMIN')">
                             <a class="btn btn-success"
-                               th:href="@{editPatient(id=${p.id}, keyword=${keyword}, page=${currentPage})}">Edit</a>
+                               th:href="@{/admin/editPatient(id=${p.id}, keyword=${keyword}, page=${currentPage})}">Edit</a>
                         </td>
                     </tr>
                     </tbody>
@@ -51,7 +51,7 @@
                     <li th:each="page,status:${pages}">
                         <a th:class="${status.index==currentPage?'btn btn-primary ms-1':'btn btn-outline-primary ms-1'}"
                            th:text="${status.index}"
-                           th:href="@{index(page=${status.index}, keyword=${keyword})}"></a>
+                           th:href="@{/user/index(page=${status.index}, keyword=${keyword})}"></a>
                     </li>
                 </ul>
             </div>
